# st20156395-Game-Engine-Dev

./: .gitignore  CMakeLists.txt  README.md
src/: Game.cpp  Game.h  Player.cpp  Player.h  main.cpp
tools/cmake/: common.cmake
tools/doxygen/: doxyconf
